--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: blue;
+    background-color: red;
     
 }
